--- a/app/build.gradle
+++ b/app/build.gradle
@@ -10,7 +10,8 @@ android {
         targetSdkVersion 28
         versionCode 1
         versionName "1.0"
-        testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
+        // testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
+        testInstrumentationRunner "cucumber.api.android.CucumberAndroidJUnitRunner"
     }
 
     useLibrary 'android.test.runner'
@@ -46,7 +47,7 @@ dependencies {
     testImplementation 'org.junit.jupiter:junit-jupiter-engine:5.4.1'
     testImplementation 'org.junit.vintage:junit-vintage-engine:5.4.1'
 
-    // Opcinal -- Biblioteca Hamcrest
+    // Opcional -- Biblioteca Hamcrest
     testImplementation 'org.hamcrest:hamcrest:2.1'
 
 
@@ -75,4 +76,12 @@ dependencies {
 
     // Intent mocking support
     androidTestImplementation 'androidx.test.espresso:espresso-intents:3.2.0'
+
+    
+    /*******************/
+    /* Test de aceptación */
+    /*******************/
+    androidTestImplementation 'io.cucumber:cucumber-android:4.4.1'
+    androidTestImplementation 'io.cucumber:cucumber-picocontainer:4.4.0'
+    androidTestUtil 'androidx.test:orchestrator:1.1.1'
 }
